Java 16 smells